[package]
name = "runecast-protocol"
version = "0.8.1"
edition = "2021"
description = "Protocol definitions for RuneCast WebSocket communication"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde_with = { version = "3.16", features = ["macros"] }
async-trait = "0.1"

[dev-dependencies]
pretty_assertions = "1.4"
